example/Deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "example"
  namespace: "qa"
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: "example-deployment"
  template:
    metadata:
      labels:
        app: "example-deployment"
    spec:
      volumes:
        - name: example-volume
          persistentVolumeClaim:
            claimName: example-volume-claim
      containers:
        - name: "example"
          image: "itayp/example:1.0.18"
          resources:
            limits:
              cpu: "100m"
              memory: 128Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: "/health"
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: example-volume
              mountPath: /var/storage
