example/Service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "example-service"
  namespace: "qa"
spec:
  type: "ClusterIP"
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: "example-deployment"
