example/Ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "example-ingress"
  namespace: "qa"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "example-qa.digital-cloud-services.com"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "example-service"
                port:
                  number: 80
